Fix overflow on mobile screen

--- a/react/editbar.global.css
+++ b/react/editbar.global.css
@@ -201,8 +201,9 @@ html, body {
 
 .mobile-preview {
   width: 360px;
+  height: 640px;
+  overflow-x: hidden;
 }
-
 
 .stroke-blue {
   stroke: #368DF7
